
<resources>
    <string name="app_name">Custom Keyboard</string>
    <string name="subtype_generic">%s</string>
    <string name="welcome">Welcome</string>
    <string name="activate">
        Please click the enable button below to navigate to keyboard settings.
        Find Custom Keyboard in the list and enable it.
        A warning dialog will appear, click OK(Custom Keyboard does NOT collect any data).
        Then, navigate back and click the select buttonbelow and choose Custom Keyboard from the list.
        After that you can test thekeyboard using the text field below.
        To open the settings, tap the button below and click on Custom Keyboard.
    </string>
    <string name="version">Version 1.0.0</string>
    <string name="autocaps">Auto capitalization</string>
    <string name="vib">Vibration</string>
    <string name="borders">Key borders</string>
    <string name="prediction">Enable text prediction</string>
    <string name="welcome_desc">Enjoy a full-fledged PC keyboard on your android device</string>
    <string name="multiple_desc">Switch easily between three keyboard faces, all with adjustable height</string>
    <string name="multiple_title">Multiple faces</string>
    <string name="open_desc">No spying, no data collecting. All the source code can be found on GitHub</string>
    <string name="open_title">Open source</string>
    <string-array name="default_layout">
        <item name="1">Symbol Alternates</item>
        <item name="2">Word Alternates</item>
        <item name="3">Shifted Alternates</item>
        <item name="4">Mirrored Alternates</item>
        <item name="5">Extra Alternates</item>
    </string-array>
    <string-array name="default_layout_values">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string-array name="theme">
        <item name="0">Random</item>
        <item name="1">Black/White</item>
        <item name="2">White/Black</item>
        <item name="3">Blue/White</item>
        <item name="4">Blue/Black</item>
        <item name="5">Green/White</item>
        <item name="6">Green/Black</item>
        <item name="7">Red/White</item>
        <item name="8">Red/Black</item>
        <item name="9">Cyan/White</item>
        <item name="10">Cyan/Black</item>
        <item name="11">Magenta/White</item>
        <item name="12">Magenta/Black</item>
        <item name="13">Yellow/White</item>
        <item name="14">Yellow/Black</item>
        <item name="15">Purple/White</item>
        <item name="16">Purple/Black</item>
        <item name="17">Pink/White</item>
        <item name="18">Pink/Black</item>
        <item name="19">Orange/White</item>
        <item name="20">Orange/Black</item>
        <item name="21">Material/White</item>
        <item name="22">Material/Black</item>
    </string-array>
    <string-array name="theme_values">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>
        <item name="21">21</item>
        <item name="22">22</item>
    </string-array>
    <string name="debug">Debug</string>
    <string name="word_separators" translatable="false">\u0009.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="edit_text">Test your keyboard here</string>
    <string name="settings">Settings</string>
    <string name="select">Select</string>
    <string name="enable">Enable</string>
    <string name="test">Test your keyboard here</string>
    <string name="placeholder"></string>
    <!--
    ,\n
Lorem ipsum dolor sit amet,\n
consectetur adipiscing elit.\n
Curabitur dolor dolor
lobortis fringilla elit ut,\n
tristique condimentum lacus.
    -->
    <string name="speech">Speech</string>
    <string name="cursor_left">Insert to right of cursor</string>
    <string name="names">Show Layout Names</string>
    <string name="pairs">Insert paired characters</string>
    <string name="auto">Autocorrect</string>
    <string name="spaces">Indent with Spaces</string>
    <string name="indent">Indentation Helper</string>
    <string name="dot">Double Space for Period</string>
    <string name="shift">Toggle Selection Case on Shift</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="theme">Theme</string>
    <string name="rainbow">Use Custom Colors</string>
    <string name="text_size">Text Size</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">HH:mm:ss</string>

    <string name="name">Matthew Morrone</string>
    <string name="email">matthewmorrone1@gmail.com</string>
    <string name="phone">7177362012</string>
    <string name="address">2217 Concord Circle</string>

    <string name="k1_label">git clone</string>
    <string name="k1">git clone https://github.com/matthewmorrone/</string>
    <string name="k2_label">git pull</string>
    <string name="k2">git pull</string>
    <string name="k3_label">git add</string>
    <string name="k3">git add --all</string>
    <string name="k4_label">git commit</string>
    <string name="k4">git commit -m \u0022autocommit\u0022</string>
    <string name="k5_label">git push</string>
    <string name="k5">git push</string>
    <string name="k6_label">git diff</string>
    <string name="k6">git diff</string>
    <string name="k7_label">git status</string>
    <string name="k7">git status -s</string>
    <string name="k8_label">mm</string>
    <string name="k8">matthewmorrone</string>

    <string name="popup_first">-_…</string>
    <string name="popup_second">\u0009\'\u0022\\/</string>
    <string name="popup_third">.,?!;:</string>
    <string name="popup_thirdharacters_1">!`~"</string>
    <string name="popup_thirdharacters_2">\@²"</string>
    <string name="popup_thirdharacters_3">#³"</string>
    <string name="popup_thirdharacters_4">$¢"</string>
    <string name="popup_thirdharacters_5">%÷"</string>
    <string name="popup_thirdharacters_6">^→←↑↓⇄"</string>
    <string name="popup_thirdharacters_7">&amp;+±°"</string>
    <string name="popup_thirdharacters_8">*×="</string>
    <string name="popup_thirdharacters_9">([{&lt;⧼⧙⧛"</string>
    <string name="popup_thirdharacters_0">)]}&gt;⧽⧘⧚"</string>
    <string name="popup_thirdharacters_q">ɋϙϟҩȹƣ</string>
    <string name="popup_thirdharacters_w">ɯωѡƿꚇɰɷʚ</string>
    <string name="popup_thirdharacters_e">ɛⲉǝҽəᴇɘɜ</string>
    <string name="popup_thirdharacters_r">ρϱꝛʀʁɾɹ®</string>
    <string name="popup_thirdharacters_t">τθϑþŧтʇʈꞇԏꚍ</string>
    <string name="popup_thirdharacters_y">үчɥɣⴴʏɤϥ</string>
    <string name="popup_thirdharacters_u">ᴜυʊʉȣⳙ</string>
    <string name="popup_thirdharacters_i">ıꙇⱶɨɪĳi̇</string>
    <string name="popup_thirdharacters_o">οœøɵɔꚛꭥɶ</string>
    <string name="popup_thirdharacters_p">πψφƥᴩпⲣⳡϡ</string>
    <string name="popup_thirdharacters_a">αɑæąʌɐɒᴀ</string>
    <string name="popup_thirdharacters_s">ꜱσſʃʆꞩßʂ</string>
    <string name="popup_thirdharacters_d">δðꝺɗȸд∂ᴅᴆ</string>
    <string name="popup_thirdharacters_f">ϝƒꞙꟻфɸꜰ</string>
    <string name="popup_thirdharacters_g">γᵹȝɠɡɢ</string>
    <string name="popup_thirdharacters_h">ηħƕɦɧʎʜ</string>
    <string name="popup_thirdharacters_j">ɉȷᴊɟʄʝ</string>
    <string name="popup_thirdharacters_k">κƙкʞɂʔʕʡʢ</string>
    <string name="popup_thirdharacters_l">ƚłɫɬλⴳʎʟɮỻꝇꝉꞁ</string>
    <string name="popup_thirdharacters_z">ʒȝƶƨζʐʑʓ</string>
    <string name="popup_thirdharacters_x">χжξⲷ</string>
    <string name="popup_thirdharacters_c">ϛçɕʗ©</string>
    <string name="popup_thirdharacters_v">ʋꝨⱱỽⱽ</string>
    <string name="popup_thirdharacters_b">βбϐƀƃɓ␢ʙ</string>
    <string name="popup_thirdharacters_n">νŋиɲɳɴᛝ</string>
    <string name="popup_thirdharacters_m">μɱʍᴍ</string>
    <string name="close">close</string>
</resources>
