<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="10%p"
    android:keyHeight="7%p"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!-- <Row></Row> -->
    <Row android:keyWidth="9.09%p">
        <Key android:codes="-11"  android:keyIcon="@drawable/ic_paste" />
        <Key android:codes="-10"  android:keyIcon="@drawable/ic_copy" />
        <Key android:codes="-9"   android:keyIcon="@drawable/ic_cut" />
        <Key android:codes="-93"  android:keyIcon="@drawable/ic_select_all" />
        <Key android:codes="-76"  android:keyIcon="@drawable/ic_select" />
        <Key android:codes="-109" android:keyIcon="@drawable/ic_arrow_down"  android:isRepeatable="true" />
        <Key android:codes="-107" android:keyIcon="@drawable/ic_arrow_up"    android:isRepeatable="true" />
        <Key android:codes="-111" android:keyIcon="@drawable/ic_arrow_right" android:isRepeatable="true" />
        <Key android:codes="-108" android:keyIcon="@drawable/ic_arrow_left"  android:isRepeatable="true" />
        <Key android:codes="-26"  android:keyIcon="@drawable/ic_double_pointer_right" />
        <Key android:codes="-25"  android:keyIcon="@drawable/ic_double_pointer_left" />
    </Row>
    <Row>
        <Key android:codes="48" android:keyLabel="0" android:popupCharacters="@string/popup_thirdharacters_0" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="57" android:keyLabel="9" android:popupCharacters="@string/popup_thirdharacters_9" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="56" android:keyLabel="8" android:popupCharacters="@string/popup_thirdharacters_8" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="55" android:keyLabel="7" android:popupCharacters="@string/popup_thirdharacters_7" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="54" android:keyLabel="6" android:popupCharacters="@string/popup_thirdharacters_6" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="53" android:keyLabel="5" android:popupCharacters="@string/popup_thirdharacters_5" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="52" android:keyLabel="4" android:popupCharacters="@string/popup_thirdharacters_4" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="51" android:keyLabel="3" android:popupCharacters="@string/popup_thirdharacters_3" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="50" android:keyLabel="2" android:popupCharacters="@string/popup_thirdharacters_2" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="49" android:keyLabel="1" android:popupCharacters="@string/popup_thirdharacters_1" android:popupKeyboard="@layout/popup_template" />
    </Row>
    <Row>
        <Key android:codes="112" android:keyLabel="p" android:popupCharacters="@string/popup_thirdharacters_p" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="111" android:keyLabel="o" android:popupCharacters="@string/popup_thirdharacters_o" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="105" android:keyLabel="i" android:popupCharacters="@string/popup_thirdharacters_i" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="117" android:keyLabel="u" android:popupCharacters="@string/popup_thirdharacters_u" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="121" android:keyLabel="y" android:popupCharacters="@string/popup_thirdharacters_y" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="116" android:keyLabel="t" android:popupCharacters="@string/popup_thirdharacters_t" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="114" android:keyLabel="r" android:popupCharacters="@string/popup_thirdharacters_r" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="101" android:keyLabel="e" android:popupCharacters="@string/popup_thirdharacters_e" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="119" android:keyLabel="w" android:popupCharacters="@string/popup_thirdharacters_w" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="113" android:keyLabel="q" android:popupCharacters="@string/popup_thirdharacters_q" android:popupKeyboard="@layout/popup_template" />
    </Row>
    <Row>
        <Key android:codes="108" android:keyLabel="l" android:popupCharacters="@string/popup_thirdharacters_l" android:popupKeyboard="@layout/popup_template" android:horizontalGap="5%p" />
        <Key android:codes="107" android:keyLabel="k" android:popupCharacters="@string/popup_thirdharacters_k" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="106" android:keyLabel="j" android:popupCharacters="@string/popup_thirdharacters_j" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="104" android:keyLabel="h" android:popupCharacters="@string/popup_thirdharacters_h" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="103" android:keyLabel="g" android:popupCharacters="@string/popup_thirdharacters_g" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="102" android:keyLabel="f" android:popupCharacters="@string/popup_thirdharacters_f" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="100" android:keyLabel="d" android:popupCharacters="@string/popup_thirdharacters_d" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="115" android:keyLabel="s" android:popupCharacters="@string/popup_thirdharacters_s" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="97"  android:keyLabel="a" android:popupCharacters="@string/popup_thirdharacters_a" android:popupKeyboard="@layout/popup_template" />
    </Row>
    <Row>
        <Key android:codes="-7"  android:keyIcon="@drawable/ic_delete"    android:keyWidth="10%p" android:isRepeatable="true" />
        <Key android:codes="-5"  android:keyIcon="@drawable/ic_backspace" android:keyWidth="10%p" android:isRepeatable="true" />
        <Key android:codes="109" android:keyLabel="m" android:popupCharacters="@string/popup_thirdharacters_m" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="110" android:keyLabel="n" android:popupCharacters="@string/popup_thirdharacters_n" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="98"  android:keyLabel="b" android:popupCharacters="@string/popup_thirdharacters_b" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="118" android:keyLabel="v" android:popupCharacters="@string/popup_thirdharacters_v" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="99"  android:keyLabel="c" android:popupCharacters="@string/popup_thirdharacters_c" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="120" android:keyLabel="x" android:popupCharacters="@string/popup_thirdharacters_x" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="122" android:keyLabel="z" android:popupCharacters="@string/popup_thirdharacters_z" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="-1"  android:keyIcon="@drawable/ic_shift"     android:keyWidth="10%p" />    
    </Row>
    <Row>
        <Key android:codes="10"   android:keyIcon="@drawable/ic_enter"              android:keyWidth="20%p" android:popupCharacters="@string/popup_third" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="7"    android:keyIcon="@drawable/ic_tab"                android:keyWidth="10%p" android:popupCharacters="@string/popup_second" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="32"   android:keyIcon="@drawable/ic_space"              android:keyWidth="40%p" android:popupCharacters="@string/popup_first" android:popupKeyboard="@layout/popup_template" />
        <Key android:codes="-4"   android:keyIcon="@drawable/ic_grid"               android:keyWidth="10%p" />
        <Key android:codes="-102" android:keyIcon="@drawable/ic_double_chevron_right"   android:keyWidth="10%p" />
        <Key android:codes="-101" android:keyIcon="@drawable/ic_double_chevron_left"    android:keyWidth="10%p" />
    </Row>
</Keyboard>
