<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:id="@+id/speech"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="displaySpeechRecognizer"
        android:text="@string/speech"
        android:visibility="gone"
        />
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:id="@+id/enable"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="enable"
        android:text="@string/enable"
        />
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="select"
        android:text="@string/select"
        />
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/settings"
        android:onClick="settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/settings"
        />
    <EditText
        android:id="@+id/editText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/test"
        android:text="@string/placeholder"
        android:inputType="textMultiLine"
        android:lines="3"
        />
    <EditText
        android:id="@+id/editNumber"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Try numbers here."
        android:inputType="number"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/editPhone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Try a phone number here."
        android:inputType="phone"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/editEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Try an email here."
        android:inputType="textEmailAddress"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/editUri"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Try a website here."
        android:inputType="textUri"
        android:visibility="gone"
        />
</LinearLayout>
